[package]
name = "example"
version = "0.1.0"
authors = ["Epsylon <eepsylon.3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termishade = { path = "../termishade" }
termion-output = { path = "../termion-output" }
nalgebra-glm = "0.7.0"
obj-rs = "0.6.1"
