[package]
name = "example"
version = "0.1.0"
authors = ["Epsylon <eepsylon.3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion-target = { path = "../termion-target" }
nalgebra-glm = "0.7.0"
obj-rs = "0.7.4"
derive-interpolate = { path = "../derive-interpolate" }

[dependencies.termishade]
path = "../termishade"
features = ["na-renderer", "parallel"]
