[package]
name = "termion-target"
version = "0.1.0"
authors = ["Epsylon <eepsylon.3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5.5"
nalgebra = "0.21.1"
termishade = { path = "../termishade" }
