[package]
name = "termishade"
version = "0.1.0"
authors = ["Epsylon <eepsylon.3@gmail.com>"]
edition = "2018"

[features]
na-renderer = ["nalgebra"]
parallel = ["rayon", "parking_lot"]

[dependencies]
alga = "0.9.3"
itertools = "0.9.0"

[dependencies.parking_lot]
version = "0.11.0"
optional = true

[dependencies.rayon]
version = "1.3.1"
optional = true

[dependencies.nalgebra]
version = "0.21.1"
features = ["alga"]
optional = true
