[package]
name = "webrender"
version = "0.1.0"
authors = ["Epsylon <eepsylon.3@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["lib", "cdylib"]

[features]
wasm = ["termion/null", "wasm-bindgen"]

[dependencies]
termion-target = { path = "../termion-target" }
termion = { path = "../termion" }
nalgebra-glm = "0.7.0"
obj-rs = "0.7.4"
derive-interpolate = { path = "../derive-interpolate" }

[dependencies.wasm-bindgen]
version = "0.2.68"
optional = true

[dependencies.termishade]
path = "../termishade"
features = ["na-renderer"]
